--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,27 +8,26 @@
     tools:context=".ui.main.MainActivity">
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_h_20"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2"
-        android:id="@+id/guideline_h_20"/>
-
+        app:layout_constraintGuide_percent="0.2" />
 
     <ImageView
+        android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/logo"
+        android:contentDescription="@string/desc_logo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guideline_h_20"
-        android:contentDescription="@string/desc_logo"/>
+        app:layout_constraintTop_toTopOf="@id/guideline_h_20" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textlayout_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="16dp"
         android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="16dp"
         android:hint="@string/hint_email"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/logo">
@@ -44,8 +43,8 @@
         android:id="@+id/textlayout_senha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="16dp"
         android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="16dp"
         android:hint="@string/hint_password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textlayout_login">
