Corrigindo problemas no carregamento das postagens.

--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -13,7 +13,7 @@
         android:padding="8dp">
 
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="256dp"
             android:contentDescription="@string/placeholder_image"
             android:src="@drawable/empty_profile"
